--- a/package.json
+++ b/package.json
@@ -69,9 +69,11 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/json-server": "^0.14.8",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "json-server": "^1.0.0-beta.3",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
