--- a/package.json
+++ b/package.json
@@ -51,7 +51,10 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.23.11",
     "geist": "^1.3.1",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
     "input-otp": "1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
@@ -70,6 +73,7 @@
   },
   "devDependencies": {
     "@types/json-server": "^0.14.8",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
